# bim-eskd

./: .gitignore  .mcp.json  CLAUDE.md
.claude/: settings.local.json
docs/: app.js  index.html  style.css
docs/projects/: index.json
docs/projects/001_server_container/: manifest.json
projects/001_server_container/: README.md  model.ifc
projects/001_server_container/docs/: document.html
projects/001_server_container/drawings/: document.html
server/: pyproject.toml
server/scripts/: generate_sld.py  populate_electrical.py
server/src/bim_eskd/: __init__.py  main.py
server/src/bim_eskd/eskd/: __init__.py  cable_journal.py  calc_table.py  composer.py  frame.py  ifc_netlist.py  pp_converter.py  qet_primitives.py  qet_to_svg.py  sld.py  sld_elem_list.py  sld_layout.py  sld_render.py  spec_table.py  svg_primitives.py  symbols.py
server/src/bim_eskd/ifc_engine/: __init__.py  door.py  electrical.py  feature.py  ifc_utils.py  project_manager.py  roof.py  scene.py  slab.py  wall.py  window.py
server/src/bim_eskd/lib/: __init__.py  documents.py  eskd_api.py  html_sheet.py  ifc_project.py  render.py
server/src/bim_eskd/mcp_tools/: __init__.py  electrical_tools.py  eskd_tools.py  ifc_tools.py  publish_tools.py  rag_tools.py  svg_tools.py
server/src/bim_eskd/rag/: __init__.py  schema.py  seed.py  standards.py  store.py
server/src/bim_eskd/sandbox/: __init__.py  executor.py  rasterizer.py  security.py
server/src/bim_eskd/svg_renderer/: __init__.py  renderer.py
standards/parser/: __init__.py  chunker.py  cli.py  pdf_parser.py
