[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bim-eskd-server"
version = "0.1.0"
description = "Standalone IFC/ESKD server — no Blender dependency"
requires-python = ">=3.10"
dependencies = [
    # MCP
    "mcp-server",
    "mcp>=1.0.0",

    # IFC
    "ifcopenshell>=0.8.0",

    # RAG
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-huggingface>=0.0.1",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # PDF parsing (standards)
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",

    # SVG / XML
    "lxml>=5.0.0",
    "cairosvg>=2.7.0",

    # Utilities
    "requests>=2.31.0",
    "numpy>=1.26.0",
]

[project.scripts]
bim-eskd = "bim_eskd.main:main"

[tool.setuptools]
packages = { find = { where = ["src"] } }
